[package]
name = "tulip_rs_wasm"
version = "0.1.11"
edition = "2021"
description = "WebAssembly bindings for tulip_rs — Technical Analysis Library for browsers"
license = "MIT"
repository = "https://github.com/me60732/tulip_rs_wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen  = "0.2"
js-sys        = "0.3"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
serde-wasm-bindgen = "0.6"
# When publishing, pin to a release tag: { git = "...", tag = "v0.1.11" }
tulip_rs      = { git = "https://github.com/me60732/tulip_rs.git", default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-nontrapping-float-to-int", "--enable-bulk-memory"]

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
